// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Floor Plan Plain View drag new AP 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between"
    style="height: 2rem; align-items: center;"
  >
    <div
      class="ant-col"
    >
      <h4
        class="ant-typography"
        style="font-weight: bold; margin-bottom: 0px;"
      >
        TEST_2
      </h4>
    </div>
    <div
      class="ant-col"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <button
            class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 kBDiup"
            data-testid="AddEditLinks"
            type="button"
          >
            <span>
              Edit
            </span>
          </button>
          <div
            class="ant-modal-root"
          >
            <div
              class="ant-modal-wrap"
              style="display: none;"
              tabindex="-1"
            />
          </div>
        </div>
        <span
          class="ant-space-item-split"
          style="margin-right: 4px;"
        >
          <div
            class="ant-divider ant-divider-vertical"
            role="separator"
          />
        </span>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 kBDiup"
            type="button"
          >
            <span>
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
    style="margin: 0px;"
  />
  <div
    class="sc-bjUoiL fhqMFy"
  >
    <div
      class="sc-idiyUo iPgINn"
      data-testid="image-container"
    >
      <div
        data-testid="dropContainer"
        style="position: absolute; width: 100%; height: 100%;"
      />
      <div>
         
        <div>
          <div
            class="sc-ftvSup bkrOCx device-container context-Ap"
            draggable="true"
            style="top: calc(0%); left: calc(0%); opacity: 1;"
          >
            <div
              class="marker ap-status-severity-attention"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="SignalUp"
              />
               
            </div>
          </div>
        </div>
        <div>
          <div
            class="sc-ftvSup bkrOCx device-container context-Ap"
            draggable="true"
            style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
          >
            <div
              class="marker switch-status-never-contacted-cloud"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="DeviceOutlined"
              />
               
            </div>
          </div>
        </div>
      </div>
      <img
        alt="TEST_2"
        data-testid="floorPlanImage"
        src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
        style="max-height: 100%; width: 100%;"
      />
    </div>
  </div>
  <div
    alignbottom="0"
    class="ant-space ant-space-vertical sc-hHLeRK cIloEg"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-in"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassPlusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-out"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassMinusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-original"
        type="button"
      >
        <svg
          data-testid="SearchFullOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-fit"
        type="button"
      >
        <svg
          data-testid="SearchFitOutlined"
        />
      </button>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center sc-ksZaOG hojjkz"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup sc-hAZoDl bFhZhB"
          data-testid="galleryIcon"
          type="button"
        >
          <svg
            data-testid="ApplicationsSolid"
          />
        </button>
      </div>
    </div>
    <div
      class="ant-col ant-col-23"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center sc-evZas iCIDL"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <div
            class="sc-fEOsli PHHHt"
          >
            <div
              active="1"
              class="ant-card-grid sc-breuTD dUcBul"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                  <div>
                    <div
                      class="sc-ftvSup bkrOCx device-container context-Album"
                      draggable="true"
                      style="top: calc(0%); left: calc(0%); opacity: 1;"
                    >
                      <div
                        class="marker ap-status-severity-attention"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="sc-ftvSup bkrOCx device-container context-Album"
                      draggable="true"
                      style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
                    >
                      <div
                        class="marker switch-status-never-contacted-cloud"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                </div>
                <img
                  alt="Thumbnail for TEST_2"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="sc-fnykZs fEzPcC"
            >
              TEST_2
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="sc-fEOsli PHHHt"
          >
            <div
              active="0"
              class="ant-card-grid sc-breuTD cZQwAw"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                </div>
                <img
                  alt="Thumbnail for dscx"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/7231da344778480d88f37f0cca1c534f-001.png"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="sc-fnykZs emxvkY"
            >
              dscx
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Floor Plan Plain View should render correctly Plain View 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between"
    style="height: 2rem; align-items: center;"
  >
    <div
      class="ant-col"
    >
      <h4
        class="ant-typography"
        style="font-weight: bold; margin-bottom: 0px;"
      >
        TEST_2
      </h4>
    </div>
    <div
      class="ant-col"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <button
            class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 kBDiup"
            data-testid="AddEditLinks"
            type="button"
          >
            <span>
              Edit
            </span>
          </button>
          <div
            class="ant-modal-root"
          >
            <div
              class="ant-modal-wrap"
              style="display: none;"
              tabindex="-1"
            />
          </div>
        </div>
        <span
          class="ant-space-item-split"
          style="margin-right: 4px;"
        >
          <div
            class="ant-divider ant-divider-vertical"
            role="separator"
          />
        </span>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 kBDiup"
            type="button"
          >
            <span>
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
    style="margin: 0px;"
  />
  <div
    class="sc-bjUoiL fhqMFy"
  >
    <div
      class="sc-idiyUo iPgINn"
      data-testid="image-container"
    >
      <div
        data-testid="dropContainer"
        style="position: absolute; width: 100%; height: 100%;"
      />
      <div>
         
        <div>
          <div
            class="sc-ftvSup bkrOCx device-container context-Ap"
            draggable="true"
            style="top: calc(9.839357%); left: calc(65.20548%); opacity: 1;"
          >
            <div
              class="marker ap-status-severity-attention"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="SignalUp"
              />
               
            </div>
          </div>
        </div>
        <div>
          <div
            class="sc-ftvSup bkrOCx device-container context-Ap"
            draggable="true"
            style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
          >
            <div
              class="marker switch-status-never-contacted-cloud"
              style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
            >
              <svg
                data-testid="DeviceOutlined"
              />
               
            </div>
          </div>
        </div>
      </div>
      <img
        alt="TEST_2"
        data-testid="floorPlanImage"
        src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
        style="max-height: 100%; width: 100%;"
      />
    </div>
  </div>
  <div
    alignbottom="0"
    class="ant-space ant-space-vertical sc-hHLeRK cIloEg"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-in"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassPlusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-out"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassMinusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-original"
        type="button"
      >
        <svg
          data-testid="SearchFullOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-fit"
        type="button"
      >
        <svg
          data-testid="SearchFitOutlined"
        />
      </button>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center sc-ksZaOG hojjkz"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup sc-hAZoDl bFhZhB"
          data-testid="galleryIcon"
          type="button"
        >
          <svg
            data-testid="ApplicationsSolid"
          />
        </button>
      </div>
    </div>
    <div
      class="ant-col ant-col-23"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center sc-evZas iCIDL"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          <div
            class="sc-fEOsli PHHHt"
          >
            <div
              active="1"
              class="ant-card-grid sc-breuTD dUcBul"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                  <div>
                    <div
                      class="sc-ftvSup bkrOCx device-container context-Album"
                      draggable="true"
                      style="top: calc(9.839357%); left: calc(65.20548%); opacity: 1;"
                    >
                      <div
                        class="marker ap-status-severity-attention"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="sc-ftvSup bkrOCx device-container context-Album"
                      draggable="true"
                      style="top: calc(undefined%); left: calc(undefined%); opacity: 1;"
                    >
                      <div
                        class="marker switch-status-never-contacted-cloud"
                        style="align-items: center; display: flex; justify-content: center; cursor: pointer;"
                      >
                         
                      </div>
                    </div>
                  </div>
                </div>
                <img
                  alt="Thumbnail for TEST_2"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="sc-fnykZs fEzPcC"
            >
              TEST_2
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="sc-fEOsli PHHHt"
          >
            <div
              active="0"
              class="ant-card-grid sc-breuTD cZQwAw"
              data-testid="thumbnailBg"
            >
              <div
                style="width: 100%; height: 53px; position: relative;"
              >
                <div>
                   
                </div>
                <img
                  alt="Thumbnail for dscx"
                  data-testid="thumbnailBgImage"
                  src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/7231da344778480d88f37f0cca1c534f-001.png"
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
            <div
              class="sc-fnykZs emxvkY"
            >
              dscx
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Floor Plan Plain View show single floorplan 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between"
    style="height: 2rem; align-items: center;"
  >
    <div
      class="ant-col"
    >
      <h4
        class="ant-typography"
        style="font-weight: bold; margin-bottom: 0px;"
      >
        TEST_2
      </h4>
    </div>
    <div
      class="ant-col"
    />
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
    style="margin: 0px;"
  />
  <div
    class="sc-bjUoiL fhqMFy"
  >
    <div
      class="sc-dmRaPn disASS rogue-help-info"
    >
      <svg
        class="ant-tooltip-open"
        data-testid="QuestionMarkCircleOutlined"
      />
    </div>
    <div
      class="sc-idiyUo ithYLO"
      data-testid="image-container"
    >
      <div
        data-testid="dropContainer"
        style="background-color: rgba(0, 0, 0, 0.4); position: absolute; width: 100%; height: 100%;"
      />
      <img
        alt="TEST_2"
        data-testid="floorPlanImage"
        src="https://storage.googleapis.com/dev-alto-file-storage-0/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg"
        style="max-height: 100%; width: 100%;"
      />
    </div>
    <div
      class="sc-dIouRR cUCpoi"
    >
      <div
        class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
      >
        <div
          class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
        >
          <span
            aria-label="loader"
            class="SuspenseBoundary__SpinWrapper-sc-l6mvnr-0"
            role="img"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-lg ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    alignbottom="1"
    class="ant-space ant-space-vertical sc-hHLeRK loUVMb"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-in"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassPlusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-out"
        type="button"
      >
        <svg
          data-testid="MagnifyingGlassMinusOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
      style="margin-bottom: 0px;"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-original"
        type="button"
      >
        <svg
          data-testid="SearchFullOutlined"
        />
      </button>
    </div>
    <span
      class="ant-space-item-split"
      style="margin-bottom: 0px;"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="line-height: 0px; margin: 0px;"
      />
    </span>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 kBDiup"
        data-testid="image-zoom-fit"
        type="button"
      >
        <svg
          data-testid="SearchFitOutlined"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
